--- a/public/index.html
+++ b/public/index.html
@@ -185,8 +185,15 @@ function createPeer(userId, initiator) {
   if (peers[userId]) return;
 
   const pc = new RTCPeerConnection({
-    iceServers: [{ urls: "stun:stun.l.google.com:19302" }]
-  });
+  iceServers: [
+    { urls: "stun:stun.l.google.com:19302" },
+    { 
+      urls: "turn:openrelay.metered.ca:443?transport=tcp", 
+      username: "openrelayproject", 
+      credential: "openrelayproject" 
+    }
+  ]
+});
 
   peers[userId] = pc;
 
