--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,109 @@
 <head>
   <title>WebRTC Room</title>
 
+   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: system-ui, -apple-system, sans-serif;
+    }
+
+    body {
+      background: #0f172a;
+      color: white;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+
+    /* Join Screen */
+    #joinScreen {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 15px;
+    }
+
+    #joinScreen h2 {
+      font-weight: 500;
+      color: #e2e8f0;
+    }
+
+    #roomId {
+      padding: 10px 14px;
+      border-radius: 8px;
+      border: none;
+      outline: none;
+      width: 250px;
+      background: #1e293b;
+      color: white;
+    }
+
+    #joinScreen button {
+      padding: 10px 18px;
+      border-radius: 8px;
+      border: none;
+      background: #3b82f6;
+      color: white;
+      cursor: pointer;
+      transition: 0.2s;
+    }
+
+    #joinScreen button:hover {
+      background: #2563eb;
+    }
+
+    /* Room Layout */
+    #roomContainer {
+      display: none;
+      flex: 1;
+      flex-direction: column;
+    }
+
+    #videos {
+      flex: 1;
+      display: grid;
+      gap: 12px;
+      padding: 15px;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    }
+
+    /* Controls */
+    #controls {
+      height: 70px;
+      background: #1e293b;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+    }
+
+    #controls button {
+      padding: 10px 18px;
+      border-radius: 20px;
+      border: none;
+      cursor: pointer;
+      font-size: 14px;
+      transition: 0.2s;
+    }
+
+    .muteBtn {
+      background: #ef4444;
+      color: white;
+    }
+
+    .cameraBtn {
+      background: #f59e0b;
+      color: white;
+    }
+
+    #controls button:hover {
+      opacity: 0.8;
+    }
+  </style>
   
 </head>
 <body>
