--- a/public/index.html
+++ b/public/index.html
@@ -3,110 +3,115 @@
 <head>
   <title>WebRTC Room</title>
 
-   <style>
+    <style>
     * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-      font-family: system-ui, -apple-system, sans-serif;
     }
 
     body {
+      font-family: 'Segoe UI', sans-serif;
       background: #0f172a;
       color: white;
-      height: 100vh;
       display: flex;
       flex-direction: column;
+      height: 100vh;
+    }
+
+    /* Top Bar */
+    .top-bar {
+      background: #1e293b;
+      padding: 15px;
+      text-align: center;
+      font-size: 18px;
+      font-weight: 600;
+      letter-spacing: 1px;
+      border-bottom: 1px solid #334155;
+    }
+
+    /* Video Container */
+    #videos {
+      flex: 1;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 10px;
+      padding: 10px;
+      overflow-y: auto;
+    }
+
+    video {
+      width: 100%;
+      height: 100%;
+      background: black;
+      border-radius: 12px;
+      object-fit: cover;
+    }
+
+    /* Controls */
+    .controls {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      padding: 15px;
+      background: #1e293b;
+      border-top: 1px solid #334155;
+    }
+
+    button {
+      padding: 12px 18px;
+      border: none;
+      border-radius: 50px;
+      font-size: 14px;
+      cursor: pointer;
+      transition: 0.2s ease;
+    }
+
+    .btn-primary {
+      background: #2563eb;
+      color: white;
+    }
+
+    .btn-danger {
+      background: #dc2626;
+      color: white;
+    }
+
+    .btn-secondary {
+      background: #475569;
+      color: white;
+    }
+
+    button:hover {
+      transform: scale(1.05);
+      opacity: 0.9;
     }
 
     /* Join Screen */
     #joinScreen {
-      flex: 1;
+      position: absolute;
+      inset: 0;
+      background: rgba(15, 23, 42, 0.95);
       display: flex;
       flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      gap: 15px;
-    }
-
-    #joinScreen h2 {
-      font-weight: 500;
-      color: #e2e8f0;
-    }
-
-    #roomId {
-      padding: 10px 14px;
-      border-radius: 8px;
-      border: none;
-      outline: none;
-      width: 250px;
-      background: #1e293b;
-      color: white;
-    }
-
-    #joinScreen button {
-      padding: 10px 18px;
-      border-radius: 8px;
-      border: none;
-      background: #3b82f6;
-      color: white;
-      cursor: pointer;
-      transition: 0.2s;
-    }
-
-    #joinScreen button:hover {
-      background: #2563eb;
-    }
-
-    /* Room Layout */
-    #roomContainer {
-      display: none;
-      flex: 1;
-      flex-direction: column;
-    }
-
-    #videos {
-      flex: 1;
-      display: grid;
-      gap: 12px;
-      padding: 15px;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    }
-
-    /* Controls */
-    #controls {
-      height: 70px;
-      background: #1e293b;
-      display: flex;
       justify-content: center;
       align-items: center;
       gap: 20px;
     }
 
-    #controls button {
-      padding: 10px 18px;
-      border-radius: 20px;
+    #joinScreen input {
+      padding: 12px;
+      border-radius: 8px;
       border: none;
-      cursor: pointer;
-      font-size: 14px;
-      transition: 0.2s;
+      width: 250px;
+      font-size: 16px;
     }
 
-    .muteBtn {
-      background: #ef4444;
+    #joinScreen button {
+      background: #2563eb;
       color: white;
-    }
-
-    .cameraBtn {
-      background: #f59e0b;
-      color: white;
-    }
-
-    #controls button:hover {
-      opacity: 0.8;
     }
   </style>
-  
 </head>
 <body>
 
