--- a/public/index.html
+++ b/public/index.html
@@ -3,115 +3,89 @@
 <head>
   <title>WebRTC Room</title>
 
-    <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
+  <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      font-family: Arial, sans-serif;
       background: #0f172a;
       color: white;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
     }
 
-    /* Top Bar */
-    .top-bar {
-      background: #1e293b;
-      padding: 15px;
-      text-align: center;
-      font-size: 18px;
-      font-weight: 600;
-      letter-spacing: 1px;
-      border-bottom: 1px solid #334155;
-    }
-
-    /* Video Container */
-    #videos {
-      flex: 1;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 10px;
-      padding: 10px;
-      overflow-y: auto;
-    }
-
-    video {
-      width: 100%;
-      height: 100%;
-      background: black;
-      border-radius: 12px;
-      object-fit: cover;
-    }
-
-    /* Controls */
-    .controls {
-      display: flex;
-      justify-content: center;
-      gap: 15px;
-      padding: 15px;
-      background: #1e293b;
-      border-top: 1px solid #334155;
-    }
-
-    button {
-      padding: 12px 18px;
-      border: none;
-      border-radius: 50px;
-      font-size: 14px;
-      cursor: pointer;
-      transition: 0.2s ease;
-    }
-
-    .btn-primary {
-      background: #2563eb;
-      color: white;
-    }
-
-    .btn-danger {
-      background: #dc2626;
-      color: white;
-    }
-
-    .btn-secondary {
-      background: #475569;
-      color: white;
-    }
-
-    button:hover {
-      transform: scale(1.05);
-      opacity: 0.9;
-    }
-
-    /* Join Screen */
     #joinScreen {
-      position: absolute;
-      inset: 0;
-      background: rgba(15, 23, 42, 0.95);
+      height: 100vh;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
-      gap: 20px;
+      flex-direction: column;
+      gap: 15px;
     }
 
     #joinScreen input {
       padding: 12px;
+      width: 250px;
       border-radius: 8px;
       border: none;
-      width: 250px;
       font-size: 16px;
     }
 
     #joinScreen button {
-      background: #2563eb;
+      padding: 12px 25px;
+      border: none;
+      border-radius: 8px;
+      background: #3b82f6;
       color: white;
+      font-size: 16px;
+      cursor: pointer;
     }
+
+    #joinScreen button:hover {
+      background: #2563eb;
+    }
+
+    #roomContainer {
+      display: none;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+
+    #videos {
+  flex: 1;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 15px;
+  padding: 15px;
+  box-sizing: border-box;
+}
+
+    video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* keeps aspect ratio */
+  border-radius: 12px;
+  background: black;
+}
+
+    #controls {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      padding: 15px;
+      background: #1e293b;
+    }
+
+    #controls button {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 14px;
+    }
+
+    .muteBtn { background: #ef4444; color: white; }
+    .cameraBtn { background: #10b981; color: white; }
   </style>
+
 </head>
 <body>
 
