--- a/public/index.html
+++ b/public/index.html
@@ -3,94 +3,118 @@
 <head>
   <title>WebRTC Room</title>
 
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #0f172a;
-      color: white;
-    }
+<style>
+  body {
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+    background: #0b0f19;
+    color: #e5e7eb;
+  }
 
-    #joinScreen {
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      gap: 15px;
-    }
+  /* Join Screen */
+  #joinScreen {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+  }
 
-    #joinScreen input {
-      padding: 12px;
-      width: 250px;
-      border-radius: 8px;
-      border: none;
-      font-size: 16px;
-    }
+  #joinScreen input {
+    padding: 12px 16px;
+    width: 260px;
+    border-radius: 6px;
+    border: 1px solid #1f2937;
+    background: #111827;
+    color: #e5e7eb;
+    font-size: 14px;
+    outline: none;
+    transition: border 0.2s ease;
+  }
 
-    #joinScreen button {
-      padding: 12px 25px;
-      border: none;
-      border-radius: 8px;
-      background: #3b82f6;
-      color: white;
-      font-size: 16px;
-      cursor: pointer;
-    }
+  #joinScreen input:focus {
+    border-color: #3b82f6;
+  }
 
-    #joinScreen button:hover {
-      background: #2563eb;
-    }
+  #joinScreen button {
+    padding: 10px 22px;
+    border-radius: 6px;
+    border: 1px solid #1f2937;
+    background: transparent;
+    color: #e5e7eb;
+    font-size: 14px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+  }
 
-    #roomContainer {
-      display: none;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
+  #joinScreen button:hover {
+    background: #1f2937;
+  }
 
-    #videos {
-  flex: 1;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 15px;
-  padding: 15px;
-  box-sizing: border-box;
-}
+  /* Room Container */
+  #roomContainer {
+    display: none;
+    height: 100vh;
+    flex-direction: column;
+  }
 
-    video {
-  width: 100%;
-  height: 100%;
-  object-fit: cover; /* keeps aspect ratio */
-  border-radius: 12px;
-  background: black;
-}
+  #videos {
+    flex: 1;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 16px;
+    padding: 20px;
+    box-sizing: border-box;
+  }
 
-    #controls {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      padding: 15px;
-      background: #1e293b;
-    }
+  video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+    background: #000;
+    border: 1px solid #1f2937;
+  }
 
-    #controls button {
-      padding: 10px 20px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 14px;
-    }
+  /* Controls */
+  #controls {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    padding: 16px;
+    background: #0f172a;
+    border-top: 1px solid #1f2937;
+  }
 
-    .muteBtn { background: #ef4444; color: white; }
-    .cameraBtn { background: #10b981; color: white; }
-  </style>
+  #controls button {
+    padding: 8px 18px;
+    border-radius: 6px;
+    border: 1px solid #1f2937;
+    background: transparent;
+    color: #e5e7eb;
+    font-size: 13px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+  }
+
+  #controls button:hover {
+    background: #1f2937;
+  }
+
+  /* Remove bright colors */
+  .muteBtn,
+  .cameraBtn {
+    background: transparent;
+    border: 1px solid #1f2937;
+  }
+</style>
 
 </head>
 <body>
 
 <div id="joinScreen">
-  <h2>Join WebRTC Room</h2>
+  <h2>WebRTC Room</h2>
   <input id="roomId" placeholder="Enter Room ID" />
   <button onclick="joinRoom()">Join Room</button>
 </div>
